[package]
name = "url-shortener-ztm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "url-shortener-ztm"
path = "src/bin/main.rs"

[lib]
name = "url_shortener_ztm_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-macros = "0.5.0"
bon = "3.7.2"
derive_more = { version = "2.0.1", features = [ "full" ] }
figment = { version = "0.10.19", features = [ "env", "yaml" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [ "macros", "net", "rt-multi-thread", "signal" ] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [ "fs", "request-id", "trace" ] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [ "registry", "env-filter" ] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = [ "json" ] }
