[package]
name = "url-shortener-ztm"
version = "0.11.1"
edition = "2024"

[[bin]]
name = "url-shortener-ztm"
path = "src/bin/main.rs"

[lib]
name = "url_shortener_ztm_lib"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = [ "typed-header" ] }
axum-macros = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
figment = { version = "0.10.19", features = [ "env", "yaml" ] }
nanoid = "0.4.0"
serde = { version = "1.0.226", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "postgres" , "sqlite" ] }
tera = "1.20.0"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = [ "macros", "net", "rt-multi-thread", "signal" ] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [ "fs", "request-id", "trace" ] }
tower_governor = "0.8.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [ "registry", "env-filter" ] }
url = "2.5.7"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
regex = "1.11.2"
reqwest = { version = "0.12.15", features = [ "json" ] }
serde_json = "1.0.143"
